--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/ralph-learning/js-tdd-course.git"
+    "url": "git+https://github.com/ralph-learning/references-project.git"
   },
   "keywords": [
     "Javascript"
@@ -23,7 +23,7 @@
   "author": "Ralph Effting <ralfting@gmail.com>",
   "license": "MIT",
   "bugs": {
-    "url": ""
+    "url": "https://github.com/ralph-learning/references-project/issues"
   },
   "devDependencies": {
     "babel-loader": "^7.1.2",
