Add support to JSX

--- a/package.json
+++ b/package.json
@@ -41,10 +41,12 @@
   "devDependencies": {
     "babel-loader": "^7.1.2",
     "babel-preset-env": "^1.6.1",
+    "babel-preset-react": "^6.24.1",
     "babel-register": "^6.26.0",
     "chai": "^4.1.2",
     "cross-env": "^5.1.1",
     "css-loader": "^0.28.7",
+    "enzyme": "^3.2.0",
     "eslint": "^4.12.1",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-config-airbnb-base": "^12.1.0",
@@ -61,6 +63,8 @@
     "webpack-dev-server": "^2.9.7"
   },
   "dependencies": {
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
     "tailwindcss": "^0.3.0"
   }
 }
