--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "lint": "./node_modules/.bin/eslint src/*.js",
     "prepush": "npm run lint",
-    "test": "./node_modules/.bin/mocha tests/**/*.spec.js --require babel-register ",
-    "test:tdd": "./node_modules/.bin/mocha tests/**/*.spec.js --require babel-register --watch",
+    "test": "./node_modules/.bin/mocha tests/**/*.spec.js --require babel-register --require ./tests/setup.js",
+    "test:tdd": "./node_modules/.bin/mocha tests/**/*.spec.js --require babel-register --require ./tests/setup.js --watch",
     "test:coverage": "nyc npm run test",
     "dev": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=webpack.config.js",
     "watch": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --watch --progress --hide-modules --config=webpack.config.js",
@@ -23,8 +23,14 @@
       "html"
     ],
     "exclude": [
-      "tests/**"
-    ]
+      "tests/specs/**",
+      "tests/setup.js"
+    ],
+    "extension": [
+      ".jsx",
+      ".js"
+    ],
+    "sourceMap": true
   },
   "repository": {
     "type": "git",
@@ -47,6 +53,7 @@
     "cross-env": "^5.1.1",
     "css-loader": "^0.28.7",
     "enzyme": "^3.2.0",
+    "enzyme-adapter-react-16": "^1.1.0",
     "eslint": "^4.12.1",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-config-airbnb-base": "^12.1.0",
@@ -55,6 +62,8 @@
     "eslint-plugin-react": "^7.5.1",
     "extract-text-webpack-plugin": "^3.0.2",
     "husky": "^0.14.3",
+    "jsdom": "^11.5.1",
+    "jsdom-global": "^3.0.2",
     "mocha": "^4.0.1",
     "nyc": "^11.3.0",
     "postcss-loader": "^2.0.9",
