--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "lint": "./node_modules/.bin/eslint src/*.js",
     "prepush": "npm run lint",
-    "test": "./node_modules/.bin/mocha tests/**/*.spec.js --require babel-register --require ./tests/setup.js",
-    "test:tdd": "./node_modules/.bin/mocha tests/**/*.spec.js --require babel-register --require ./tests/setup.js --watch",
+    "test": "./node_modules/.bin/mocha **/__test__/*.spec.js --require babel-register --require ./test/setup.js",
+    "test:tdd": "./node_modules/.bin/mocha **/__test__/*.spec.js --require babel-register --require ./test/setup.js --watch",
     "test:coverage": "nyc npm run test",
     "dev": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=webpack.config.js",
     "watch": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --watch --progress --hide-modules --config=webpack.config.js",
@@ -62,6 +62,7 @@
     "eslint-plugin-react": "^7.5.1",
     "extract-text-webpack-plugin": "^3.0.2",
     "husky": "^0.14.3",
+    "jest": "^21.2.1",
     "jsdom": "^11.5.1",
     "jsdom-global": "^3.0.2",
     "mocha": "^4.0.1",
