--- a/.eslintignore
+++ b/.eslintignore
@@ -7,7 +7,8 @@
 /tests/fixtures/**
 /tests/performance/**
 /tests/**
-/**/__test__/**
+/**/__tests__/**
+/src/javascript/setupTest.js
 /tmp/**
 test.js
 !.eslintrc.js
