--- a/package.json
+++ b/package.json
@@ -56,9 +56,11 @@
     "webpack-dev-server": "^2.9.7"
   },
   "dependencies": {
+    "history": "^4.7.2",
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-router-dom": "^4.2.2",
     "tailwindcss": "^0.3.0"
   }
 }
